<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.blumo</groupId>
    <artifactId>FileChampion4j</artifactId>
    <version>0.9.0</version>
    <packaging>jar</packaging>
    <name>FileSentry4J</name>

    <properties>
        <jdk8.version>1.8</jdk8.version>
        <jdk9.version>9</jdk9.version>
        <jdk10.version>10</jdk10.version>
        <jdk11.version>11</jdk11.version>
        <maven.compiler.source>${jdk11.version}</maven.compiler.source>
        <maven.compiler.target>${jdk11.version}</maven.compiler.target>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- Jackson -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.14.2</version>
        </dependency>

        <!-- org.json -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20230227</version>
        </dependency>

        <!-- Jetbrain Annotations -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.0.1</version>
        </dependency>

        <!-- junit -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.9.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.9.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>FileSentry4J</finalName>
        <plugins>
            <!-- Set a JDK compiler level -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <executions>
                    <execution>
                        <id>compile-java-8</id>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <source>1.8</source>
                            <target>1.8</target>
                        </configuration>
                    </execution>
                    <execution>
                        <id>compile-java-9</id>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <source>9</source>
                            <target>9</target>
                        </configuration>
                    </execution>
                    <execution>
                        <id>compile-java-10</id>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <source>10</source>
                            <target>10</target>
                        </configuration>
                    </execution>
                    <execution>
                        <id>compile-java-11</id>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <source>11</source>
                            <target>11</target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Make this jar executable -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.blumo.FileChampion4j.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <forkCount>1</forkCount>
                    <reuseForks>true</reuseForks>
                    <!--suppress UnresolvedMavenProperty reported by Idea-->
                    <argLine>${argLine}</argLine>
                    <systemPropertyVariables>
                        <java.version>${java.version}</java.version>
                    </systemPropertyVariables>
                    <includes>
                        <include>**/Test*.java</include>
                        <include>**/*Test.java</include>
                    </includes>
                </configuration>
                <executions>
                    <execution>
                        <id>test-java-8</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>
                            <argLine>--illegal-access=permit</argLine>
                            <systemPropertyVariables>
                                <java.version>1.8</java.version>
                            </systemPropertyVariables>
                            <includes>
                                <include>**/Test*.java</include>
                                <include>**/*Test.java</include>
                            </includes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>test-java-11</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>
                            <systemPropertyVariables>
                                <java.version>11</java.version>
                            </systemPropertyVariables>
                            <includes>
                                <include>**/Test*.java</include>
                                <include>**/*Test.java</include>
                            </includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
